feat: add welcome page style

--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -25,3 +25,5 @@
     font-weight: bold;
     font-style: normal;
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap');
