--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -47,3 +47,12 @@ $vp--2560:                          2560px;
 
 $retina-dpi:                        144dpi;
 $retina-dppx:                       1.5dppx;
+
+
+
+// App colors
+$color-main: #F9AF48;
+$color-main-hover: #E38F1B;
+$color-main-click: #F9AF48;
+$color-main-disable: #C9C9C9;
+$color-add: #C92037;
