--- a/src/sass/UI/button.scss
+++ b/src/sass/UI/button.scss
@@ -1,25 +1,30 @@
 .button {
+    font-family: 'Audi Type';
     width: 290px;
     height: 50px;
-    margin-bottom: 20px;
-    background-color: #F9AF48;
     border-radius: 15px;
     border: none;
     text-transform: capitalize;
-    font-family: 'Audi Type';
     font-weight: bold;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
-    transition: all 0.5s linear;
-    // font: 'Audi Type' bold 16px/1.2;
-    &:hover {
-        background-color:#E38F1B;
+    transition: all 0.25s linear;
+
+    &_main {
+        background-color: $color-main;
+        &:hover{
+            background-color: $color-main-hover;
+        }
+        &:active{
+            background-color: $color-main-click;
+        }
+        &:disabled{
+            background-color: $color-main-disable;
+        }
     }
-    &:disabled{
-        background-color:#C9C9C9;
+    &_add {
+        background-color: $color-add;
     }
+
 }
-
-
-// подумать как с цветами сделать и раскрутить на ховер
