--- a/src/sass/global/container.scss
+++ b/src/sass/global/container.scss
@@ -3,6 +3,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-image: url('../../../public/bg.png');
+  background-size: cover;
 
   @include vp--2559 {
     padding: 0 40px;
