--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,7 @@
 //---------------------------------
 
 @import "blocks/header";
+@import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
 // ! но не используйте это для текстовых полей ( input, textarea )
@@ -43,4 +44,4 @@
 
 // Pages
 
-@import '../pages/SignIn.scss';
+@import '../pages/Welcome/welcome.scss';
