feat: add sign in and sign up style

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,9 @@
 //---------------------------------
 
 @import "blocks/header";
+@import "../components/CentralContainer/central-container.scss";
+@import "../components/AuthContainer/auth-container.scss";
+@import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
