feat: add board page

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -56,3 +56,4 @@ $color-main-hover: #E38F1B;
 $color-main-click: #F9AF48;
 $color-main-disable: #C9C9C9;
 $color-add: #C92037;
+$color-light-text: #797979;
