--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "mixins";
 @import "function";
 @import "global/fonts";
+@import "global/scrollbar";
 @import "global/reboot";
 @import "global/utils";
 @import "global/container";
@@ -19,6 +20,7 @@
 
 @import "blocks/header";
 @import "../components/AuthContainer/auth-container.scss";
+@import "../components/Column/column.scss";
 @import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "blocks/block";
 
