--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import "../components/AuthContainer/auth-container.scss";
 @import "../components/Column/column.scss";
 @import "../components/StartPagesLayout/start-pages-layout.scss";
+@import "../components/BoardItem/board-item.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
@@ -50,3 +51,4 @@
 
 @import '../pages/Welcome/welcome.scss';
 @import '../pages/Board/board.scss';
+@import '../pages/Main/main.scss';
