feat: add modalsSlice

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,7 +23,7 @@
 @import "../components/Column/column.scss";
 @import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "../components/BoardItem/board-item.scss";
-@import "../components/Modal/modal.scss";
+@import "../components/Modals/Modal/modal.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
