--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -2,4 +2,10 @@
     &__container {
         max-width: 100%;
     }
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px
+    }
 }
