--- a/src/sass/global/container.scss
+++ b/src/sass/global/container.scss
@@ -1,11 +1,11 @@
 .container {
   margin: 0 auto;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   background-image: url('../../../public/bg.png');
   background-size: cover;
-
+  background-attachment: fixed;
   @include vp--2559 {
     padding: 0 40px;
   }
