--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,7 @@
 @import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "../components/BoardItem/board-item.scss";
 @import "../components/Modals/Modal/modal.scss";
+@import "../components/Modals/CreatingBoardModal/creating-board-model.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
