feat: add search and adding user

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@
 @import "../components/Column/column.scss";
 @import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "../components/BoardItem/board-item.scss";
+@import "../components/BoardUsers/board-users.scss";
 @import "../components/Modals/Modal/modal.scss";
 @import "../components/Modals/CreatingBoardModal/creating-board-model.scss";
 @import "blocks/block";
