fix: Board page title and add link in title

--- a/src/components/BoardItem/board-item.scss
+++ b/src/components/BoardItem/board-item.scss
@@ -16,6 +16,8 @@
         font-family: 'Audi Type Ext';
         font-size: 18px;
         line-height: 22px;
+        cursor: pointer;
+        color:#000;
     }
 
     &__description{
