--- a/src/components/BoardItem/board-item.scss
+++ b/src/components/BoardItem/board-item.scss
@@ -4,6 +4,7 @@
     background-color: #fff;
     border-radius: 15px;
     padding: 20px;
+    box-shadow: 4px 4px 18px rgba(0, 0, 0, 0.15);
 
     & header {
         display: flex;
