feat: add header

--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,5 +1,41 @@
 .header {
-  position: relative;
+  background-color: $color-default-white;
+  transition: background-color 1s ease;
+}
+
+.header_sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #C9C9C9;
+  /* animation: smoothScroll 1s forwards; */
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-left: 50px;
+  margin-right: 110px;
+
+  * {
+    color: $color-default-black;
+  }
+
+  .header__logo {
+    margin-right: 9%;
+  }
+
+  .header__lang {
+    margin-left: auto;
+    margin-right: 3%;
+
+    svg {
+      width: 20px;
+      height: auto;
+    }
+  }
 
   &__bottom-block {
     position: relative;
