feat: editing board

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,6 +26,7 @@
 @import "../components/BoardUsers/board-users.scss";
 @import "../components/Modals/Modal/modal.scss";
 @import "../components/Modals/CreatingBoardModal/creating-board-model.scss";
+@import "../components/Modals/EditBoardModal/edit-profile-modal.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
