--- a/src/components/BoardItem/board-item.scss
+++ b/src/components/BoardItem/board-item.scss
@@ -29,4 +29,18 @@
         color: $color-light-text;
         text-overflow: ellipsis;
     }
+
+    &__edit {
+        cursor: pointer;
+        padding: 10px 3px 3px 10px;
+    }
+
+    &__plus {
+        line-height: 120px;
+        text-align: center;
+        font-size: 30px;
+        cursor: pointer;
+        // font-weight: bold;
+    }
+
 }
