--- a/src/sass/UI/input.scss
+++ b/src/sass/UI/input.scss
@@ -9,7 +9,7 @@
 
     label {
         color: #000;
-        font-family: inherit;  
+        font-family: inherit;
         background-color: transparent;
         font-size: 16px;
         line-height: 16px;
@@ -27,22 +27,22 @@
     }
 }
 
-input {
+.input-container input {
     background-color: transparent;
     border: 1px solid #797979;
     border-radius: 15px;
     box-sizing: border-box;
     color: #000;
     font-size: 16px;
-    line-height: 20px; 
+    line-height: 20px;
     height: 50px;
     outline: 0;
     padding: 15px 0 15px 20px;
     width: 100%;
 }
 
-input:focus + label,
-input:not(:placeholder-shown) + label{
+.input-container input:focus + label,
+.input-container input:not(:placeholder-shown) + label{
 top: -18px;
 left: 10px;
 font-size: 11px;
