--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   background-color: $color-default-white;
   transition: background-color 1s ease;
+  box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.15);
 }
 
 .header_sticky {
@@ -14,8 +15,8 @@
 .header__wrapper {
   display: flex;
   align-items: center;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   margin-left: 50px;
   margin-right: 110px;
 
