--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,22 +1,41 @@
 .footer__wrapper {
-    display: flex;
+    // display: flex;
+    padding: 0 20px 0 20px;
+    height: 70px;
     align-items: center;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    // padding-bottom: 20px;
+    // padding-top: 20px;
+    background-color: #000;
+    font-family: 'Audi Type';
+    // можно попробовать растянутый Ext
+    font-weight: bold;
+    color: #fff;
+    font-size: 12px;
 
     .footer__info {
         display: flex;
+        justify-content: space-between;
         align-items: center;
+        line-height: 70px;
+        // width: 100%;
+    }
+
+    .footer__rss-developers {
+        display: flex;
+        width: 440px;
+        justify-content: space-between;
+        // gap: 100px;
     }
 
     .footer__info a {
         display: flex;
         align-items: center;
+        color: inherit;
     }
 }
 
 .footer__rss {
-    margin-left: auto;
+    // margin-left: auto;
 
     svg {
         width: 120px;
