--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -5,12 +5,12 @@
     align-items: center;
     // padding-bottom: 20px;
     // padding-top: 20px;
-    background-color: #000;
+    background-color: #fff;
     font-family: 'Audi Type';
     // можно попробовать растянутый Ext
     font-weight: bold;
-    color: #fff;
-    font-size: 12px;
+    color: #000;
+    font-size: 13px;
 
     .footer__info {
         display: flex;
