feat: add edit, add, delete column with modal

--- a/src/pages/Board/board.scss
+++ b/src/pages/Board/board.scss
@@ -34,6 +34,7 @@
             color: $color-light-text;
             background-color: transparent;
             border: none;
+            cursor: pointer;
         }
     }
 
