--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: space-between;
         padding: 0 14px;
+        flex-wrap: wrap;
         & button {
             background-color: transparent;
             border: none;
