--- a/src/components/Modals/EditBoardModal/edit-board-model.scss
+++ b/src/components/Modals/EditBoardModal/edit-board-model.scss
@@ -42,3 +42,17 @@
     padding: 2px 10px;
     }
 }
+
+.textarea {
+    background-color: transparent;
+    border: 1px solid #797979;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #000;
+    font-size: 16px;
+    line-height: 20px; 
+    height: 150px;
+    outline: 0;
+    padding: 15px 0 15px 20px;
+    width: 100%;
+}
