--- a/src/sass/UI/edit-title-input.scss
+++ b/src/sass/UI/edit-title-input.scss
@@ -1,48 +1,65 @@
-.edit-input-container {
-    position: relative;
+.edit-input {
     width: 100%;
-
-    &__delete {
-        position: absolute;
-        top: 0;
-        width: 60px;
-        height: 24px;
-        top: 4px;
-        right: 5px;
-        border-radius: 13px;
-        border: none;
-        background-color: #C92037;
-        color: #fff;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+    button {
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 25px;
+        width: 25px;
+        height: 25px;
         cursor: pointer;
+        border: none;
+        span {
+            color: white;
+            font-size: 15px;
+        }
+    } 
+
+    button:disabled{
+        background-color: $color-main-disable !important;
     }
 
-    .edit-title-input {
-        background-color: transparent;
-        border: 1px solid #797979;
-        border-radius: 15px;
-        box-sizing: border-box;
-        color: #000;
-        font-size: 16px;
-        line-height: 20px;
-        height: 32px;
-        outline: 0;
-        padding: 15px 0 15px 20px;
-        width: 100%;
+    button.delete {
+        background-color: $color-add;
     }
-    
-    .edit-title-input-error {
-        background-color: transparent;
+
+    button.cancel {
+        background-color: $color-cancel;
+    }
+
+    button.submit {
+        background-color: $color-accept;
+    }
+}
+.edit-input-container {
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    border-radius: 25px;
+    padding: 5px;
+    flex-wrap: nowrap;
+    border: 1px solid $color-light-text;
+
+    &.error {
         border: 1px solid red;
-        border-radius: 15px;
-        box-sizing: border-box;
-        color: red;
-        font-size: 16px;
-        line-height: 20px;
-        height: 20px;
-        outline: 0;
-        padding: 15px 0 15px 20px;
-        width: 100%;
     }
+    input {
+        border: none;
+        background-color: transparent;
+        border-radius: 25px;
+        width: 100%;
+        height: 100%;
+        padding-left: 10px;
+        
+        &:focus {
+          outline: none;
+        }
+    } 
 }
 
 
