--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -57,3 +57,5 @@ $color-main-click: #F9AF48;
 $color-main-disable: #C9C9C9;
 $color-add: #C92037;
 $color-light-text: #797979;
+$color-cancel: #bdbdbd;
+$color-accept: #6fde98;
