--- a/src/sass/UI/button.scss
+++ b/src/sass/UI/button.scss
@@ -1,8 +1,7 @@
 .button {
     font-family: 'Audi Type';
     height: 50px;
-    max-width: 290px;
-    width: 100%;
+    width: 290px;
     border-radius: 15px;
     border: none;
     text-transform: capitalize;
