--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/nav";
 @import "blocks/theme-switcher";
 @import "../components/AuthContainer/auth-container.scss";
+@import "../components/Task/EditingTask/edit-task.scss";
 @import "../components/Column/column.scss";
 @import "../components/StartPagesLayout/start-pages-layout.scss";
 @import "../components/BoardItem/board-item.scss";
