feat: add task style

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -32,6 +32,7 @@
 @import "../components/Modals/Modal/modal.scss";
 @import "../components/Modals/EditBoardModal/edit-board-model.scss";
 @import "../components/Modals/EditProfileModal/edit-profile-modal.scss";
+@import "../components/Task/task.scss";
 @import "blocks/block";
 
 // используйте это для отключения ховеров на тач устройствах
