--- a/src/components/Task/task.scss
+++ b/src/components/Task/task.scss
@@ -37,5 +37,12 @@
         max-height: 90px;
         text-overflow: ellipsis;
         overflow: hidden;
+        margin-bottom: 20px;
+    }
+
+    &__user-list{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
     }
 }
