--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer__wrapper {
     // display: flex;
     padding: 0 20px 0 20px;
-    height: 70px;
+    height: 60px;
     align-items: center;
     // padding-bottom: 20px;
     // padding-top: 20px;
@@ -16,7 +16,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        line-height: 70px;
+        line-height: 60px;
         // width: 100%;
     }
 
@@ -32,6 +32,11 @@
         align-items: center;
         color: inherit;
     }
+}
+
+.footer__wrapper-dark {
+    color: #fff;
+    background-color: #262626;
 }
 
 .footer__rss {
