--- a/src/sass/global/reboot.scss
+++ b/src/sass/global/reboot.scss
@@ -31,6 +31,10 @@ body {
   sans-serif;
 }
 
+.body-dark {
+  background-image: url('../../../public/bg-dark.png');
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
