--- a/src/pages/Board/board.scss
+++ b/src/pages/Board/board.scss
@@ -72,7 +72,7 @@
         padding-top: 10px;
         overflow-x: auto;
         padding-bottom: 10px;
-        align-items: flex-start;
+        min-height: 80vh;
     }
 }
 
