--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,3 +1,7 @@
+.footer {
+    background-color: #fff;
+}
+
 .footer__wrapper {
     // display: flex;
     padding: 0 20px 0 20px;
@@ -5,7 +9,6 @@
     align-items: center;
     // padding-bottom: 20px;
     // padding-top: 20px;
-    background-color: #fff;
     font-family: 'Audi Type';
     // можно попробовать растянутый Ext
     font-weight: bold;
