--- a/src/sass/blocks/nav.scss
+++ b/src/sass/blocks/nav.scss
@@ -20,11 +20,11 @@
 
   button {
     height: 40px;
-    width: 180px;
     padding: 10px 15px;
     white-space: nowrap;
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    text-transform: none;
   }
 }
