--- a/src/components/Modals/Modal/modal.scss
+++ b/src/components/Modals/Modal/modal.scss
@@ -30,10 +30,13 @@
     }
 
     &__close {
+        position: absolute;
+        top: 15px;
+        right: 15px;
         background-color: transparent;
         border: none;
         display: block;
         cursor: pointer;
-        transform: translate(110px, -35px);
+        //transform: translate(110px, -35px);
     }
 }
