fix: drag task and drag helpers to same column

--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -12,7 +12,7 @@
 
     &.on-task-over {
         & > .column_container {
-            border: 10px solid $color-add;
+            background-color: white;
         }
     }
 
