feat: almost done (dark things)

--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -37,3 +37,43 @@
         }
     }
 }
+
+.column-dark {
+    width: 265px;
+    flex-shrink: 0;
+    padding: 10px;
+    padding-top: 16px;
+    color: #D9D9D9;
+    background: rgba(47, 47, 47, 0.9);
+    // border: 1px solid #D9D9D9;
+    backdrop-filter: blur(7.5px);
+    border-radius: 15px;
+
+    & header {
+        font-family: 'Audi Type Ext';
+        padding-left: 18px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+
+    & > footer {
+        display: flex;
+        justify-content: space-between;
+        // padding: 0 14px;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        & > button {
+            margin-left: 14px;
+            background-color: transparent;
+            border: none;
+            font-family: 'Audi Type Ext';
+            color: inherit;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 20px;
+            cursor: pointer;
+        }
+    }
+}
