--- a/src/components/Task/task.scss
+++ b/src/components/Task/task.scss
@@ -46,3 +46,48 @@
         flex-wrap: wrap;
     }
 }
+
+.task-dark {
+    width: 100%;
+    padding: 20px;
+    background-color: #262626;
+    border-radius: 10px;
+
+    & > header {
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        font-family: 'Audi Type Ext';
+        font-size: 18px;
+        margin: 0;
+        margin-bottom: 20px;
+
+        button {
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
+            transform: translateX(10px);
+            span {
+                color: #D9D9D9;
+                font-size: 20px;
+                font-weight: bolder;
+
+            }
+        }
+    }
+
+    & > p {
+        color: #D9D9D9;
+        margin: 0;
+        max-height: 90px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        margin-bottom: 20px;
+    }
+
+    &__user-list{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+}
