--- a/src/pages/Board/board.scss
+++ b/src/pages/Board/board.scss
@@ -76,4 +76,72 @@
     }
 }
 
+.board-page-dark{
+    &__container{
+        max-width: 100%;
+        margin: 0 20px;
+        display: inline-flex;
+        flex-direction: column;
+        padding-top: 10px;
+        color: #D9D9D9;
+    }
 
+    &__header{
+        position: relative;
+        background-color: #2F2F2F;
+        height: 50px;
+        border-radius: 15px;
+        padding: 10px 15px 10px 60px;
+        display: inline-flex;
+        justify-content: space-between;
+
+
+        & h3 {
+            margin: 0;
+            font-family: 'Audi Type Ext';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 30px;
+        }
+
+        .add-list-button {
+            font-family: 'Audi Type';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 20px;
+            color: #D9D9D9;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+        }
+
+        .return-button {
+            position: absolute;
+            left: 15px;
+            top: 11px;
+            width: 28px;
+            height: 28px;
+            background-color: #262626;
+            border-radius: 5px;
+            border: none;
+            line-height: 28px;
+            padding-top: 2px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgb(22, 19, 19);
+            }
+
+            &:active {
+                background-color: #000;
+            }
+
+            svg {
+                fill: #FFFFFF;
+            }
+        }
+    }
+
+}
