--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -3,7 +3,7 @@
 }
 
 .footer__wrapper {
-    padding: 0 20px 0 20px;
+    padding: 0 50px;
     height: 60px;
     align-items: center;
     background-color: #fff;
