fix: tast styles

--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -87,7 +87,7 @@
         backdrop-filter: blur(7.5px);
         border-radius: 15px;
 
-        & header {
+        & > header {
             font-family: 'Audi Type Ext';
             padding-left: 18px;
             font-weight: 700;
