--- a/src/components/Task/task.scss
+++ b/src/components/Task/task.scss
@@ -77,9 +77,10 @@
         display: flex;
         justify-content: space-between;
         font-family: 'Audi Type Ext';
+        font-weight: 700;
         font-size: 18px;
         margin: 0;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
 
         button {
             border: none;
