fix: selected user dark

--- a/src/components/Task/EditingTask/edit-task.scss
+++ b/src/components/Task/EditingTask/edit-task.scss
@@ -154,7 +154,7 @@
     }
 
     &__user-item {
-        background-color: $color-main-disable;
+        background-color: #2F2F2F;
         border-radius: 20px;
         cursor: pointer;
         padding: 2px 10px;
