fix: del comments

--- a/src/components/Task/EditingTask/edit-task.scss
+++ b/src/components/Task/EditingTask/edit-task.scss
@@ -121,7 +121,7 @@
     }
 
     input:focus {
-        // border: 1px solid #737373;
+        border: 1px solid #737373;
     }
 
     input:disabled{
