feat: add loader

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,6 +56,7 @@
 @import './UI/button.scss';
 @import './UI/input.scss';
 @import './UI/edit-title-input.scss';
+@import './UI/loader.scss';
 
 
 // Pages
