--- a/src/components/StartPagesLayout/start-pages-layout.scss
+++ b/src/components/StartPagesLayout/start-pages-layout.scss
@@ -3,27 +3,51 @@
         font-family: 'Audi Type';
         display: flex;
         flex-direction: column;
-        
+
         & header{
             color: $color-main;
             font-family: 'Prompt', sans-serif;
-            font-size: 25px;
+            font-size: 35px;
             text-align: center;
             padding-top: 18px;
 
             & a {
-                color: $color-main;
+                color: crimson;
                 text-decoration: none;
+                text-shadow:
+                        -1px -1px 0 $color-default-black,
+                        1px -1px 0 $color-default-black,
+                        -1px 1px 0 $color-default-black,
+                        1px 1px 0 $color-default-black;
+            }
+
+            & p {
+                color: #262626;
+                max-width: 90%;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 20px;
+                text-shadow:
+                        -1px -1px 0 white,
+                        1px -1px 0 white,
+                        -1px 1px 0 white,
+                        1px 1px 0 white;
             }
         }
     }
 
     &__central-container{
         width: 930px;
+        max-width: 94%;
         height: 529px;
         margin: auto;
-        margin-top: 130px;
+        margin-top: 50px;
         padding: 27px 32px;
         display: flex;
+        z-index: 0;
+
+        @include vp--799 {
+            height: initial;
+        }
     }
 }
