--- a/src/pages/Welcome/welcome.scss
+++ b/src/pages/Welcome/welcome.scss
@@ -1,14 +1,26 @@
 .welcome {
-    &__image{
+    padding-top: 30px;
+    padding-bottom: 50px;
+
+    .spl__container {
+        margin-bottom: 80px;
+    }
+
+    &__image {
         width: 100%;
         height: 100%;
         background-image: url('../../../public/morpheus.png');
         background-size: cover;
+        background-position: center;
         overflow: hidden;
         border-radius: 22px;
     }
 
-    &__buttons-container{
+    &__inner-wrapper {
+        width: 100%;
+    }
+
+    &__buttons-container {
         display: flex;
         width: 100%;
         height: 100%;
@@ -16,5 +28,101 @@
         align-items: flex-end;
         padding-bottom: 90px;
         gap: 25px;
+
+        @include vp--799 {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    section {
+        margin-left: auto;
+        margin-right: auto;
+        text-shadow:
+                -1px -1px 0 white,
+                1px -1px 0 white,
+                -1px 1px 0 white,
+                1px 1px 0 white;
+    }
+
+    .welcome__heading {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        justify-content: center;
+        text-align: center;
+    }
+
+    &__school-info {
+        margin-bottom: 70px;
+        width: 90%;
+    }
+
+    &__school-info p {
+        text-shadow: none;
+        color: #32deee;
+    }
+
+    &__team {
+        width: 80%;
+    }
+
+    &__team-content {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__team-content a {
+        max-width: 220px;
+        padding: 0 10px;
+        display: flex;
+        flex-direction: column;
+        color: #32deee;
+        text-shadow: none;
+    }
+
+    @include vp--799 {
+        &__image {
+            background-image: none;
+        }
+
+        &__buttons-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 0;
+        }
+
+        &__buttons-container a {
+            width: 60%;
+        }
+
+        &__buttons-container a button {
+            width: 100%;
+        }
+    }
+
+    @include vp--529 {
+        &__buttons-container a {
+            width: 90%;
+        }
+
+        &__buttons-container a button {
+            width: 100%;
+        }
+    }
+
+    @include vp--529 {
+        &__team-content {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__team-content a {
+            margin-bottom: 15px;
+            align-items: center;
+            text-align: center;
+        }
     }
 }
