--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,6 +34,7 @@
 @import "../components/Modals/EditProfileModal/edit-profile-modal.scss";
 @import "../components/Task/task.scss";
 @import "blocks/block";
+@import "blocks/error-404";
 
 // используйте это для отключения ховеров на тач устройствах
 // ! но не используйте это для текстовых полей ( input, textarea )
