--- a/src/pages/Board/board.scss
+++ b/src/pages/Board/board.scss
@@ -1,7 +1,7 @@
 .board-page{
     &__container{
         max-width: 100%;
-        margin: 0 20px;
+        padding: 0 20px;
         display: inline-flex;
         flex-direction: column;
         padding-top: 10px;
