--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -45,9 +45,9 @@
     color: #D9D9D9;
     background-color: #262626;
 
-    svg {
-        fill: #D9D9D9;
-    }
+    //svg {
+    //    fill: #D9D9D9;
+    //}
 }
 
 .footer__rss {
