--- a/src/components/AuthContainer/auth-container.scss
+++ b/src/components/AuthContainer/auth-container.scss
@@ -5,6 +5,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media screen and (max-width: 850px) {
+            justify-content: center;
+        }
     }
 
     &__image {
@@ -14,6 +18,10 @@
         background-size: cover;
         overflow: hidden;
         border-radius: 28px;
+
+        @media screen and (max-width: 850px) {
+            display: none;
+        }
     }
 
 
@@ -27,6 +35,14 @@
         & :last-child {
             // margin-top: 30px;
             //что-то он ласта чайлд даже во вложенных контейнерах забирает
+        }
+
+        @media screen and (max-width: 850px) {
+            width: 70%;
+
+            & > * {
+                width: 100% !important;
+            }
         }
     }
 
