--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   background-color: $color-default-white;
-  transition: background-color 1s ease;
+  transition: background-color, padding 1s ease;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.15);
   color: $color-default-black;
   z-index: 50;
@@ -9,7 +9,7 @@
 
 .header-dark {
   position: relative;
-  transition: background-color 1s ease;
+  transition: background-color, padding 1s ease;
   background-color: #2f2f2f;
   color: #D9D9D9;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.15);
@@ -18,8 +18,9 @@
 .header_sticky {
   position: sticky;
   top: 0;
+  transition: background-color, padding 1s ease;
   width: 100%;
-  background-color: #999;
+  padding: 10px 0;
   //color: inherit;
   /* animation: smoothScroll 1s forwards; */
 }
