--- a/src/components/AuthContainer/auth-container.scss
+++ b/src/components/AuthContainer/auth-container.scss
@@ -42,7 +42,12 @@
 
             & > * {
                 width: 100% !important;
+                max-width: 100% !important;
             }
+        }
+
+        @media screen and (max-width: 530px) {
+            width: 95%;
         }
     }
 
